--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -60,9 +60,14 @@
                                             </ng-container>
                                         </ng-container>
                                     </div>
-                                    <div> <b>{{'common.notes' | translate}}:</b>
+                                    <div> <b>{{'common.userNotes' | translate}}:</b>
                                         <ng-container *ngIf="element.userNotes; else empty">
                                             {{element.userNotes}}
+                                        </ng-container>
+                                    </div>
+                                    <div> <b>{{'common.adminNotes' | translate}}:</b>
+                                        <ng-container *ngIf="element.adminNotes; else empty">
+                                            {{element.adminNotes}}
                                         </ng-container>
                                     </div>
                                 </div>
@@ -103,7 +108,7 @@
                         <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
                     </ng-container>
         
-                    <ng-container matColumnDef="name">
+                    <ng-container matColumnDef="name" sticky>
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.name' | translate}}</th>
                         <td mat-cell *matCellDef="let element" class="width-135">
                             {{element.name}}
@@ -237,10 +242,20 @@
                     </ng-container>
         
                     <ng-container matColumnDef="userNotes">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.notes' | translate}}</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.userNotes' | translate}}</th>
                         <td mat-cell *matCellDef="let element" class="width-100 text-truncate" [matTooltip]="element.userNotes" matTooltipPosition="above">
                             <ng-container *ngIf="element.userNotes; else empty">
                                 {{element.userNotes}}
+                            </ng-container>
+                        </td>
+                        <td mat-footer-cell *matFooterCellDef></td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="adminNotes">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.adminNotes' | translate}}</th>
+                        <td mat-cell *matCellDef="let element" class="width-100 text-truncate" [matTooltip]="element.adminNotes" matTooltipPosition="above">
+                            <ng-container *ngIf="element.adminNotes; else empty">
+                                {{element.adminNotes}}
                             </ng-container>
                         </td>
                         <td mat-footer-cell *matFooterCellDef></td>
@@ -269,7 +284,7 @@
                         <td mat-footer-cell *matFooterCellDef></td>
                     </ng-container>
         
-                    <ng-container matColumnDef="actions">
+                    <ng-container matColumnDef="actions" stickyEnd>
                         <th mat-header-cell *matHeaderCellDef class="text-center">
                             <button *ngIf="!isAdvancedSearchOpened" mat-icon-button (click)="showAdvancedFilter()">
                                 <mat-icon>filter_list</mat-icon>
