--- a/src/styles.scss
+++ b/src/styles.scss
@@ -257,6 +257,11 @@ mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary {
   min-width: 135px;
 }
 
+.width-175 {
+  width: 175px;
+  min-width: 175px;
+}
+
 .mdc-data-table__cell, .mdc-data-table__header-cell {
   padding: 0 16px 0 14px !important;
 }
