--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid h-100">
     <div class="row justify-content-center align-items-center text-center h-100">
         <div class="col-md-4 col-12 p-5 bg-white container-border">
-            <img src="assets/images/logo.jpg" loading="lazy" alt="img" class="img-fluid mb-3">
+            <img src="assets/images/logo-wz-name.png" loading="lazy" alt="img" class="img-fluid logo mb-3">
             <form [formGroup]="form" novalidate (ngSubmit)="resetPassword()" class="col-12 px-0">
                 <mat-form-field class="w-100">
                     <mat-label>{{'common.email' | translate}}</mat-label>
@@ -15,7 +15,7 @@
                 </mat-form-field>
                 <button mat-flat-button class="mt-2 w-100" type="submit" color="primary" [disabled]="isLoading">
                     <i *ngIf="isLoading" class="fa-solid fa-spinner fa-spin"></i>
-                    <span class="px-2">{{'common.login' | translate}}</span>
+                    <span class="px-2">{{'common.send' | translate}}</span>
                 </button>
             </form>
         </div>
