--- a/src/styles.scss
+++ b/src/styles.scss
@@ -287,19 +287,20 @@ mat-mdc-fab.mat-primary, .mat-mdc-mini-fab.mat-primary {
 
 @media (max-width: 769px) {
   .advanced-filter {
-    position: fixed;
-    top: 55px;
-    left: 0;
     z-index: 1511111111 !important;
     width: 100%;
+    min-width: 100%;
     background-color: white;
-    height: 100%;
+    height: 100vh;
     .header {
       background-color: #f1f1f1;
       padding-inline-start: 16px;
     }
+    .filter-form {
+      height: calc(100% - 200px);
+    }
     .advanced-body {
-      height: 450px;
+      height: 100%;
       overflow-y: scroll;
     }
   }
