--- a/src/app/admin/address/address.component.html
+++ b/src/app/admin/address/address.component.html
@@ -1,40 +1,51 @@
-<div class="container-fluid table-container">
-    <div class="row mx-0 my-3">
-      <button color="primary" mat-raised-button (click)="add()">
-        {{'address.add' | translate}}
-      </button>
-    </div>
-  
-    <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
-          <td mat-cell *matCellDef="let element" class="w-100">{{element.name}}</td>
-        </ng-container>
+<div class="container-fluid table-container" [class.px-0]="isMobileView">
+  <div *ngIf="!isMobileView" class="row mx-0 my-3">
+    <button color="primary" mat-raised-button (click)="add()">
+      {{'address.add' | translate}}
+    </button>
+  </div>
 
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>  </th>
-          <td mat-cell *matCellDef="let element">
-              <div class="d-flex">
-                  <button mat-icon-button color="primary" (click)="update(element)">
-                      <mat-icon>edit</mat-icon>
-                  </button>
-                  <button mat-icon-button color="warn" (click)="delete(element)">
-                      <mat-icon>delete</mat-icon>
-                  </button>
-              </div>
-          </td>
+  <div *ngIf="dataSource.data.length > 0; else emptyData" class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>{{'common.name' | translate}}</th>
+        <td mat-cell *matCellDef="let element" class="w-100">{{element.name}}</td>
+        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{dataSource.data.length}}</b> </td>
       </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons [length]="dataSource.data.length"></mat-paginator>
-    </div>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <ng-template [ngTemplateOutlet]="actionsMenu" [ngTemplateOutletContext]="{$implicit: element}"></ng-template>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+    </table>
   </div>
-  
-  <ng-template #emptyData>
-    <app-empty-data></app-empty-data>
-  </ng-template>
-  
+
     
+  <button *ngIf="isMobileView" mat-mini-fab color="primary" (click)="add()" class="mobile-fab-button">
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
+
+<ng-template #emptyData>
+  <app-empty-data></app-empty-data>
+</ng-template>
+
+<ng-template #actionsMenu let-element>
+  <button mat-icon-button color="primary" [matMenuTriggerFor]="menu">
+    <i class="fa-solid fa-ellipsis"></i>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item class="primary" (click)="update(element)">
+      {{'common.edit' | translate}}
+    </button>
+    <button mat-menu-item class="text-danger" (click)="delete(element)">
+      {{'common.delete' | translate}}
+    </button>
+  </mat-menu>
+</ng-template>
