--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -8,11 +8,7 @@
                 <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc"
                     matSortDisableClear="true">
                     <ng-container matColumnDef="mobileView">
-                        <th mat-header-cell *matHeaderCellDef>
-                            <button mat-icon-button (click)="showAdvancedFilter()">
-                                <mat-icon>filter_list</mat-icon>
-                            </button>
-                        </th>
+                        <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let element" class="py-2">
                             <div class="d-flex justify-content-between align-items-start">
                                 <div class="d-flex flex-column">
@@ -113,7 +109,7 @@
                                 </div>
                             </div>
                         </td>
-                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
+                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{dataSource.data.length}}</b> </td>
                     </ng-container>
         
                     <ng-container matColumnDef="name" sticky>
@@ -121,7 +117,7 @@
                         <td mat-cell *matCellDef="let element" class="width-175">
                             {{element.name}}
                         </td>
-                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{total}}</b> </td>
+                        <td mat-footer-cell *matFooterCellDef>{{'common.total' | translate}}: <b>{{dataSource.data.length}}</b> </td>
                     </ng-container>
         
                     <ng-container matColumnDef="mobile">
@@ -338,6 +334,9 @@
                     <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
                 </table>
             </div>
+            <button *ngIf="isMobileView" mat-icon-button color="primary" (click)="showAdvancedFilter()" class="mobile-filter-button">
+                <mat-icon>filter_list</mat-icon>
+            </button>
             <div *ngIf="isAdvancedSearchOpened" class="advanced-filter">
                 <div class="header d-flex justify-content-between align-items-center">
                     <div>{{ 'advancedFilter.advancedFilter' | translate }}</div>
